--- a/backendapi/requirements.txt
+++ b/backendapi/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
