--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,10 @@
 [build]
   command = "pip install -r backend/requirements.txt && npm install && npm run build"
-  publish = "build"
-  
-  # Specify the directory that contains the final build (React usually outputs to the "build" folder)
-  publish = "build"
+  publish = "build"  # Specify the directory that contains the final build
 
 [build.environment]
-  # Define the Python version required by your project
   PYTHON_VERSION = "3.9"  # or your project's required version
-  
-  # Define the Node.js version required by your project
   NODE_VERSION = "16"      # or your project's required version
 
 [build.lifecycle]
-  # This section is optional; typically, the main command in [build] suffices
   onBuild = "echo 'Running custom build commands...'"  # Optional
